log
Thu 28 Mar 2024 04:27:29 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:21: error: invalid initializer
   32 |   List nuevaLista = (List *) malloc(sizeof(List));
      |                     ^
In file included from list.c:3,
                 from test.c:5:
list.c:34:21: error: invalid operands to binary != (have ‘List’ {aka ‘struct List’} and ‘void *’)
   34 |   assert(nuevaLista != NULL);
      |                     ^~
list.c:34:21: error: invalid operands to binary != (have ‘List’ {aka ‘struct List’} and ‘void *’)
   34 |   assert(nuevaLista != NULL);
      |                     ^~
In file included from test.c:5:
list.c:35:13: error: invalid type argument of ‘->’ (have ‘List’ {aka ‘struct List’})
   35 |   nuevaLista->head = NULL;
      |             ^~
list.c:36:13: error: invalid type argument of ‘->’ (have ‘List’ {aka ‘struct List’})
   36 |   nuevaLista->tail = NULL;
      |             ^~
list.c:37:13: error: invalid type argument of ‘->’ (have ‘List’ {aka ‘struct List’})
   37 |   nuevaLista->current = NULL;
      |             ^~
list.c:38:10: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘List *’ {aka ‘struct List *’} was expected
   38 |   return nuevaLista;
      |          ^~~~~~~~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1000ead
Thu 28 Mar 2024 04:28:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:51: error: expected ‘)’ before ‘;’ token
   32 |   List nuevaLista = ((List *) malloc(sizeof(List));
      |                     ~                             ^
      |                                                   )
list.c:32:21: error: invalid initializer
   32 |   List nuevaLista = ((List *) malloc(sizeof(List));
      |                     ^
list.c:39:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   39 | }
      | ^
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
In file included from test.c:5:
list.c:32:8: error: unused variable ‘nuevaLista’ [-Werror=unused-variable]
   32 |   List nuevaLista = ((List *) malloc(sizeof(List));
      |        ^~~~~~~~~~
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:86:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   86 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:77:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   77 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:64:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   64 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bd727e8
Thu 28 Mar 2024 04:28:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
891d89d
Thu 28 Mar 2024 04:31:59 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:6: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   50 |   if(lista -> current != NULL){
      |      ^~~~~
      |      list
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:51:35: error: expected ‘;’ before ‘list’
   51 |     return list -> current -> next
      |                                   ^
      |                                   ;
   52 |     list -> current = list -> current -> next;
      |     ~~~~                           
Compilation failed
d272b51
Thu 28 Mar 2024 04:32:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:35: error: expected ‘;’ before ‘list’
   51 |     return list -> current -> next
      |                                   ^
      |                                   ;
   52 |     list -> current = list -> current -> next;
      |     ~~~~                           
Compilation failed
9fdb86b
Thu 28 Mar 2024 04:33:56 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4137e1d
Thu 28 Mar 2024 04:34:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
a6b61d1
Thu 28 Mar 2024 04:42:38 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:9: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   59 |   while(current != NULL){
      |         ^~~~~~~
      |         popCurrent
list.c:59:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:58:9: error: unused variable ‘nodo’ [-Werror=unused-variable]
   58 |   Node* nodo = list -> head;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
763f4f3
Thu 28 Mar 2024 04:45:15 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:60:11: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   60 |     while(current != NULL){
      |           ^~~~~~~
      |           popCurrent
list.c:60:11: note: each undeclared identifier is reported only once for each function it appears in
list.c:59:11: error: unused variable ‘nodo’ [-Werror=unused-variable]
   59 |     Node* nodo = list -> head;
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
fb0ad9f
Thu 28 Mar 2024 04:46:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
443cb7b
Thu 28 Mar 2024 04:46:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
d6d72e9
Thu 28 Mar 2024 04:46:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
74ce8ed
Thu 28 Mar 2024 05:02:30 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:14: error: ‘List’ {aka ‘struct List’} has no member named ‘cuurent’; did you mean ‘current’?
   70 |   if(list -> cuurent != NULL && list -> current != list -> head){
      |              ^~~~~~~
      |              current
list.c:74:7: error: ‘prevn’ undeclared (first use in this function); did you mean ‘prev’?
   74 |       prevn = current;
      |       ^~~~~
      |       prev
list.c:74:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b87fd0c
Thu 28 Mar 2024 05:02:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:14: error: ‘List’ {aka ‘struct List’} has no member named ‘cuurent’; did you mean ‘current’?
   70 |   if(list -> cuurent != NULL && list -> current != list -> head){
      |              ^~~~~~~
      |              current
Compilation failed
546f42e
Thu 28 Mar 2024 05:03:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
804c656
Thu 28 Mar 2024 05:33:46 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:84:19: error: too few arguments to function ‘createNode’
   84 |   Node *newNode = createNode();
      |                   ^~~~~~~~~~
list.c:22:8: note: declared here
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
list.c:88:5: error: ‘lit’ undeclared (first use in this function); did you mean ‘list’?
   88 |     lit -> tail = newNode;
      |     ^~~
      |     list
list.c:88:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6de8f60
Thu 28 Mar 2024 05:34:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:88:5: error: ‘lit’ undeclared (first use in this function); did you mean ‘list’?
   88 |     lit -> tail = newNode;
      |     ^~~
      |     list
list.c:88:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
199544f
Thu 28 Mar 2024 05:34:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fad936e
Sun 31 Mar 2024 12:22:51 AM UTC: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  10|2
total_score: 45/70
b8ce2ad
Sun 31 Mar 2024 12:24:53 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
85e289a
Sun 31 Mar 2024 12:27:57 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
0a0ee20
Sun 31 Mar 2024 12:28:51 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
3b065c7
Sun 31 Mar 2024 12:31:49 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
110ee32
